test/corpus/psv/quoted_values.txt
==================
PSV - Quoted values
==================
Name|Age|Location
John|25|NewYork
Alice|30|"San Francisco"

---

(source_file
  (record
    (field
      (string_value
        (non_escaped_text)))
    (field_pair
      (delimiter)
      (field
        (string_value
          (non_escaped_text))))
    (field_pair
      (delimiter)
      (field
        (string_value
          (non_escaped_text)))))
  (record
    (field
      (string_value
        (non_escaped_text)))
    (field_pair
      (delimiter)
      (field
        (integer_value)))
    (field_pair
      (delimiter)
      (field
        (string_value
          (non_escaped_text)))))
  (record
    (field
      (string_value
        (non_escaped_text)))
    (field_pair
      (delimiter)
      (field
        (integer_value)))
    (field_pair
      (delimiter)
      (field
        (string_value
          (quote_character)
          (escaped_content
            (text_content))
          (quote_character))))))
