test/corpus/psv/simple.txt
==================
PSV - Simple PSV
==================
Name|Age
John|25|
Alice|30

---

(source_file
  (record
    (field
      (string_value
        (non_escaped_text)))
    (field_pair
      (delimiter)
      (field
        (string_value
          (non_escaped_text)))))
  (record
    (field
      (string_value
        (non_escaped_text)))
    (field_pair
      (delimiter)
      (field
        (integer_value)))
    (field_pair
      (delimiter)))
  (record
    (field
      (string_value
        (non_escaped_text)))
    (field_pair
      (delimiter)
      (field
        (integer_value)))))
