test/corpus/tsv/other_values.txt
==================
TSV - Other values
==================
Name\tAge\tHexValue\tDeleted\t
John\tnull\t0x1A\ttrue
Alice\tna\t0xFF\tFALSE
Bob\t21.24\t0xFF\tTRUE
Sam\t10\t0x1A\tfalse


---

(source_file
  (record
    (field
      (string_value
        (non_escaped_text)))
    (field_pair
      (delimiter)
      (field
        (string_value
          (non_escaped_text))))
    (field_pair
      (delimiter)
      (field
        (string_value
          (non_escaped_text))))
    (field_pair
      (delimiter)
      (field
        (string_value
          (non_escaped_text))))
    (field_pair
      (delimiter)))
  (record
    (field
      (string_value
        (non_escaped_text)))
    (field_pair
      (delimiter)
      (field
        (null_value)))
    (field_pair
      (delimiter)
      (field
        (hexadecimal)))
    (field_pair
      (delimiter)
      (field
        (boolean_value))))
  (record
    (field
      (string_value
        (non_escaped_text)))
    (field_pair
      (delimiter)
      (field
        (na_value)))
    (field_pair
      (delimiter)
      (field
        (hexadecimal)))
    (field_pair
      (delimiter)
      (field
        (boolean_value))))
  (record
    (field
      (string_value
        (non_escaped_text)))
    (field_pair
      (delimiter)
      (field
        (floating_point)))
    (field_pair
      (delimiter)
      (field
        (hexadecimal)))
    (field_pair
      (delimiter)
      (field
        (boolean_value))))
  (record
    (field
      (string_value
        (non_escaped_text)))
    (field_pair
      (delimiter)
      (field
        (integer_value)))
    (field_pair
      (delimiter)
      (field
        (hexadecimal)))
    (field_pair
      (delimiter)
      (field
        (boolean_value)))))
