test/corpus/tsv/simple.txt
==================
TSV - Simple TSV
==================
Name    Age
John    25
Alice   30

---

(source_file
  (record
    (field
      (string_value
        (non_escaped_text))))
  (record
    (field
      (string_value
        (non_escaped_text))))
  (record
    (field
      (string_value
        (non_escaped_text)))))
